fix footer overlap on contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,19 @@ header{
 img{       
     margin-right: 15px;    
 }
+input[type="text"]{
+    box-sizing: border-box;    
+    margin-bottom: 10px;
+    padding: 8px;
+    width: 100%;    
+}
+input[type="text"]::placeholder{
+    opacity: .6;    
+}
+label{
+    display: inline-block;
+    padding: 8px 8px 8px 0px;
+}
 nav{
     position: absolute;
     top:20%;right:0;        
@@ -86,22 +99,6 @@ nav li{
 }
 nav li:not(:first-child):before {
     content: " | ";
-}
-input[type="text"]{
-    box-sizing: border-box;    
-    margin-bottom: 10px;
-    padding: 8px;
-    width: 100%;    
-}
-input[type="text"]::placeholder{
-    opacity: .6;    
-}
-label{
-    display: inline-block;
-    padding: 8px 8px 8px 0px;
-}
-.content p{
-    text-align: left;
 }
 textarea{    
     box-sizing: border-box;
@@ -126,6 +123,9 @@ ul{
     padding: 10px;
     width: 960px;    
 }
+.content p{
+    text-align: left;
+}
 .floatLeft{
     float: left;
     display: block;
@@ -140,6 +140,9 @@ ul{
 }
 .relativePosition{
     position: relative;
+}
+#container-div{  
+    padding-bottom: 60px;
 }
 #divHeader-container{
     background-color: #ffffff;
@@ -188,7 +191,7 @@ ul{
     }  
     .content{              
         margin:5px;           
-        margin-bottom:55px;margin-top: 0px;
+        margin-bottom:60px;margin-top: 0px;
         min-height: 185px;min-width: 300px;
         padding: 5px;
         text-align: center;
